[gd_scene load_steps=15 format=3 uid="uid://c3nd2ta6s1lc1"]

[ext_resource type="Script" path="res://game/spaceship.gd" id="1_lwp44"]
[ext_resource type="Shader" path="res://game/spaceship.gdshader" id="1_vgrp3"]
[ext_resource type="Shader" path="res://game/wobble_shader.gdshader" id="2_8ty1s"]
[ext_resource type="Texture2D" uid="uid://chu54088ywedh" path="res://game/assets/back-ship.PNG" id="2_nkohl"]
[ext_resource type="Script" path="res://scripts/interaction/interactible.gd" id="2_xb55d"]
[ext_resource type="Texture2D" uid="uid://d0uslmtlhc033" path="res://game/assets/front-ship.PNG" id="4_x23of"]
[ext_resource type="Texture2D" uid="uid://hj2bb83v0fw6" path="res://game/assets/big-smoke.PNG" id="5_6wb36"]
[ext_resource type="AudioStream" uid="uid://bxw8k0gs1t2pm" path="res://game/sfx/thrust.wav" id="7_0vxx4"]
[ext_resource type="AudioStream" uid="uid://dtilel5ilc3w7" path="res://game/sfx/explosion.wav" id="8_wkiug"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_70m8o"]
absorbent = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7rwpn"]
shader = ExtResource("2_8ty1s")
shader_parameter/normal_offset = 6.7
shader_parameter/time_influence = 1.0
shader_parameter/time_offset = 0.0
shader_parameter/y_div = 2.87

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hl1rg"]
size = Vector2(482.37, 614)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qq6uo"]
shader = ExtResource("1_vgrp3")
shader_parameter/warm_color = Color(1, 0.156863, 0, 1)
shader_parameter/gradient_direction = Vector2(0, 1)
shader_parameter/gradient_scale = 4.0
shader_parameter/normal_offset = 6.7
shader_parameter/time_influence = 1.0
shader_parameter/y_div = 2.87

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5vqt"]
size = Vector2(305, 365)

[node name="Spaceship" type="RigidBody2D" groups=["Saveable"]]
z_as_relative = false
position = Vector2(424, 406)
collision_mask = 8
mass = 0.05
physics_material_override = SubResource("PhysicsMaterial_70m8o")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_lwp44")
thrust = 10.0
trajectory_time_delta = 0.5
trajectory_time_horizon = 50.0
thrust_shake = 1
kill_speed = 150

[node name="BackShip" type="Sprite2D" parent="."]
z_as_relative = false
material = SubResource("ShaderMaterial_7rwpn")
texture = ExtResource("2_nkohl")

[node name="PlayerSeat" type="Node2D" parent="."]
position = Vector2(0, 109)

[node name="EnterShip" type="Area2D" parent="."]
position = Vector2(4, 4)
script = ExtResource("2_xb55d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterShip"]
position = Vector2(-6.5, -4)
shape = SubResource("RectangleShape2D_hl1rg")
debug_color = Color(0.69477, 0.477986, 0.363519, 0.42)

[node name="FrontShip" type="Sprite2D" parent="."]
z_index = 3
z_as_relative = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_qq6uo")
texture = ExtResource("4_x23of")

[node name="EngineVFX" type="CPUParticles2D" parent="."]
position = Vector2(-9, 229)
emitting = false
amount = 100
lifetime = 10.0
texture = ExtResource("5_6wb36")
direction = Vector2(0, 1)
spread = 56.0
gravity = Vector2(0, 0)
initial_velocity_min = 73.77
initial_velocity_max = 342.57
angular_velocity_min = -106.23
angular_velocity_max = 94.43
scale_amount_min = 0.8

[node name="DeathExplosion" type="CPUParticles2D" parent="."]
z_index = 3
position = Vector2(-8, 83)
emitting = false
amount = 20
lifetime = 10.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_6wb36")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 85.59
initial_velocity_max = 361.78
angular_velocity_min = -104.35
angular_velocity_max = 125.22
scale_amount_min = 0.7

[node name="ThrustSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1, 0)
stream = ExtResource("7_0vxx4")
pitch_scale = 0.29
max_distance = 1e+14
bus = &"SFX"

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_wkiug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 122.5)
shape = SubResource("RectangleShape2D_i5vqt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="on_interacted" from="EnterShip" to="." method="_on_enter_ship"]
